[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-met"
version = "0.0.1"
description = "Download meteorological data for the General Lake Model"
readme = README.md
authors = [{name = "John Duncan"}]
license = { file = "LICESNE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["GLM", "meterological", "weather", "climate"]
dependencies = [
    "requests",
    "pandas"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["glm_met", "glm_met.*"]